--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap-icons": "^1.9.0",
     "gh-pages": "^4.0.0",
     "react": "^17.0.2",
+    "react-countup": "^6.3.0",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
