--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.9.0",
     "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-countup": "^6.3.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
