--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-countup": "^6.3.0",
     "react-dom": "^17.0.2",
@@ -39,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
