--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "htts://eslam900.github.io/Shoping-App",
+  "homepage": "htts://eslam900.github.io/Shoping-React-App",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
